--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-xarrows": "^2.0.2",
     "reactflow": "^11.7.4",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
